--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">cPCX</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -24,7 +24,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark icon-link" asp-area="" asp-page="/Index"><i class="bx bx-home-alt-2"></i> Home</a>
+                            <a class="nav-link icon-link" asp-area="" asp-page="/Index"><i class="bx bx-home-alt-2"></i> Home</a>
                         </li>
                         <li asp-authorize class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle icon-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,10 +38,10 @@
                             </ul>
                         </li>
                         <li asp-authorize class="nav-item">
-                            <a class="nav-link text-dark icon-link" asp-area="" asp-page="/Event/Index" asp-route-eventPublicId="EMF26"><i class="bx bx-map-pin"></i> EMF</a>
+                            <a class="nav-link icon-link" asp-area="" asp-page="/Event/Index" asp-route-eventPublicId="EMF26"><i class="bx bx-map-pin"></i> EMF</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark icon-link" asp-area="" asp-page="/Guidelines"><i class="bx bx-group" ></i> Community Guidelines</a>
+                            <a class="nav-link icon-link" asp-area="" asp-page="/Guidelines"><i class="bx bx-group" ></i> Community Guidelines</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
