--- a/cpcx/Pages/Shared/_LoginPartial.cshtml
+++ b/cpcx/Pages/Shared/_LoginPartial.cshtml
@@ -17,17 +17,17 @@
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark"><i class="bx bx-log-out-circle" ></i> Logout</button>
+            <button  type="submit" class="nav-link btn btn-link"><i class="bx bx-log-out-circle" ></i> Logout</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register"><i class="bx bx-user-plus" ></i> Register</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Register"><i class="bx bx-user-plus" ></i> Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"><i class="bx bx-log-in-circle" ></i> Login</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login"><i class="bx bx-log-in-circle" ></i> Login</a>
     </li>
 }
     <li class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
