Didn't check this in earlier lol

--- a/cpcx/Pages/User/Index.cshtml
+++ b/cpcx/Pages/User/Index.cshtml
@@ -16,9 +16,9 @@
     <h2>About @Model.UserProfile.UserName@ViewData["Pronouns"]</h2>
     
     <dl>
-        <dt>Postcards Sent:</dt>
+        <dt><i class="bx bx-export text-danger"></i> Postcards Sent:</dt>
         <dd>@Model.ProfileStats.PostcardsSent</dd>
-        <dt>Postcards Received:</dt>
+        <dt><i class="bx bx-import text-danger"></i> Postcards Received:</dt>
         <dd>@Model.ProfileStats.PostcardsReceived</dd>
         <dt>Profile Description:</dt>
         <dd>@Model.UserProfile.ProfileDescription</dd>
