--- a/cpcx/Pages/Postcard/Index.cshtml
+++ b/cpcx/Pages/Postcard/Index.cshtml
@@ -1,5 +1,7 @@
 @page "{postcardId}"
+@using System.Globalization
 @using cpcx.Entities
+@using Humanizer
 @model cpcx.Pages.Postcard.Index
 
 @{
@@ -39,7 +41,21 @@
     }
     else
     {
-        <p>Sent on @Model.Postcard.SentOn by @Model.Postcard.Sender.UserName</p>
-        <p>Received on @Model.Postcard.ReceivedOn by @Model.Postcard.Receiver.UserName</p>
+        <div class="container">
+            <div class="row align-content-start">
+                <div class="col">
+                    <h3><a asp-area="" asp-page="/User/Index" asp-route-alias="@Model.Postcard.Sender.UserName">@Model.Postcard.Sender.UserName</a></h3>
+                    <p><i class="bx bx-export text-danger"></i> @Model.Postcard.SentOn.ToString("f", CultureInfo.CreateSpecificCulture("en-GB"))</p>
+                </div>
+                <div class="col text-center align-content-center">
+                    <p><i class="bx bx-time-five" ></i> @((Model.Postcard.ReceivedOn! - Model.Postcard.SentOn).Value.Humanize(3))</p>
+                    <hr />
+                </div>
+                <div class="col">
+                    <h3><a asp-area="" asp-page="/User/Index" asp-route-alias="@Model.Postcard.Receiver.UserName">@Model.Postcard.Receiver.UserName</a></h3>
+                    <p><i class="bx bx-import text-info"></i> @Model.Postcard.ReceivedOn?.ToString("f", CultureInfo.CreateSpecificCulture("en-GB"))</p>
+                </div>
+            </div>
+        </div>
     }
 </div>
