--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 bg-body-secondary">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">cPCX</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
